--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <p>Because the basics are important!</p>
     <p>Learn more about git on 
       <a href="https://git-scm.com/book/en/v2"> the offical website</a></p>
+      <p>... and another thing</p>
   </body>
 </html>
